--- a/cms/fe-web/render/include/fields/field-builder.hbs
+++ b/cms/fe-web/render/include/fields/field-builder.hbs
@@ -1,4 +1,4 @@
-<li class="field">
+<div class="field">
 
     {{#switch type}}
         {{#case "boolean" break=true}}
@@ -36,4 +36,4 @@
 
         {{/default}}
     {{/switch}}
-</li>
+</div>
