--- a/cms/fe-web/render/include/menu.hbs
+++ b/cms/fe-web/render/include/menu.hbs
@@ -1,11 +1,7 @@
 <nav class="menu">
     <ul>
         <li>
-            <a href="">
-                <p>
-
-                </p>
-            </a>
+            <a href="/contents">contents</a>
         </li>
     </ul>
 </nav>
