--- a/cms/static/less/_common.less
+++ b/cms/static/less/_common.less
@@ -9,7 +9,9 @@ fieldset {
   background: lightcyan;
   padding: 10px;
 }
-input[type=text] {
+select,
+textarea,
+input  {
   width: 100%;
   display: block;
   border: 0;
@@ -32,4 +34,14 @@ legend {
 }
 [data-json]{
   display: none!important;
+}
+.fields > div {
+  display: flex;
+
+}
+.field{
+  width: 100%;
+}
+textarea{
+  min-height: 150px;
 }
