--- a/cms/fe-web/render/include/fields/boolean-field.hbs
+++ b/cms/fe-web/render/include/fields/boolean-field.hbs
@@ -1,6 +1,6 @@
 <div class="field">
     <fieldset>
-        <legend>{{label}}</legend>
+        {{#if label}}<legend>{{label}}</legend>{{/if}}
         <label>true</label>
         <input type="radio" name="{{name}}" value="true">
         <label>false</label>
