--- a/cms/fe-web/render/include/fields/repeatable-field.hbs
+++ b/cms/fe-web/render/include/fields/repeatable-field.hbs
@@ -4,12 +4,12 @@
     </span>
     <fieldset>
         <legend>
-            <a href="#" class="js-add">add</a>
+            <a href="javascript:void(0);" class="js-add">add</a>
             <span>{{label}}</span>
         </legend>
-        <ul class="js-fields-ctr fields">
+        <div class="js-fields-ctr fields">
 
-        </ul>
+        </div>
 
     </fieldset>
 </div>
