--- a/cms/fe-web/render/include/fields/select-field.hbs
+++ b/cms/fe-web/render/include/fields/select-field.hbs
@@ -1,6 +1,6 @@
 <div class="field">
     <fieldset>
-        <legend>{{label}}</legend>
+        {{#if label}}<legend>{{label}}</legend>{{/if}}
         <select name="{{name}}" {{#multiple}}multiple{{/multiple}}>
             <option>select an option</option>
             {{#each options}}
