--- a/cms/fe-web/render/include/fields/relation-field.hbs
+++ b/cms/fe-web/render/include/fields/relation-field.hbs
@@ -1,10 +1,10 @@
 <div class="relation-field">
     <fieldset>
         {{#if label}}<legend>{{label}}</legend>{{/if}}
-        <select name="{{name}}">
-            <option >select an option</option>
+        <select name="{{name}}" >
+            <option value="" disabled>select an option</option>
             {{#each options}}
-                <option value="{{value}}">{{label}}</option>
+                <option value="{{value}}" {{#if selected}}selected{{/if}}>{{label}}</option>
             {{/each}}
         </select>
     </fieldset>
