--- a/cms/fe-web/render/include/fields/repeatable-field.hbs
+++ b/cms/fe-web/render/include/fields/repeatable-field.hbs
@@ -1,6 +1,6 @@
 <div class="field" data-mediator="repeatable-field">
     <span data-json type="application/json">
-        {{{json fields}}}
+        {{{json field}}}
     </span>
     <fieldset>
         <legend>
