--- a/cms/static/less/_common.less
+++ b/cms/static/less/_common.less
@@ -80,3 +80,10 @@ legend {
 textarea {
   min-height: 150px;
 }
+.document-ctr{
+  display: flex;
+  align-items: center;
+  img{
+    width:200px;
+  }
+}
