--- a/cms/fe-web/render/include/menu.hbs
+++ b/cms/fe-web/render/include/menu.hbs
@@ -1,7 +1,12 @@
-<nav class="menu">
-    <ul>
-        <li>
-            <a href="/contents">contents</a>
-        </li>
-    </ul>
-</nav>
+<div class="menu-ctr" data-mediator="menu-principale">
+    <button class="menu-trigger-btn">
+        <span class="typcn typcn-th-menu"></span>
+    </button>
+    <nav class="menu">
+        <ul>
+            <li>
+                <a href="/contents">contents</a>
+            </li>
+        </ul>
+    </nav>
+</div>
