--- a/cms/fe-web/render/include/fields/relation-field.hbs
+++ b/cms/fe-web/render/include/fields/relation-field.hbs
@@ -1,11 +1,12 @@
-<div class="relation-field">
-    <fieldset>
-        {{#if label}}<legend>{{label}}</legend>{{/if}}
-        <select name="{{name}}" >
-            <option value="" disabled>select an option</option>
-            {{#each options}}
-                <option value="{{value}}" {{#if selected}}selected{{/if}}>{{label}}</option>
-            {{/each}}
-        </select>
-    </fieldset>
+<div class="relation-field" data-mediator="relation-field">
+    {{#if label}}<legend>{{label}}</legend>{{/if}}
+    <select name="{{name}}" class="js-select" >
+        <option value="">select an option</option>
+        {{#each options}}
+            <option value="{{value}}" {{#if selected}}selected{{/if}}>{{label}}</option>
+        {{/each}}
+    </select>
+    <a href="javascript:void(0);" data-pattern-url="/contents/{{toEntity/id}}/" class="detail-btn js-detail-btn">
+        <span class="typcn typcn-arrow-right-thick"></span>
+    </a>
 </div>
