--- a/cms/static/less/_common.less
+++ b/cms/static/less/_common.less
@@ -120,3 +120,11 @@ textarea {
 .invisible {
   visibility: hidden !important;
 }
+[data-accordion-button]{
+  cursor: pointer;
+  user-select: none;
+}
+.contents-title{
+  padding: 20px 48px;
+  font-size: 40px;
+}
