--- a/cms/static/less/_entity.less
+++ b/cms/static/less/_entity.less
@@ -1,5 +1,9 @@
 .entity{
   padding: 20px 0;
+  border-top: 1px silver solid;
+  &:last-child{
+    border-bottom: 1px silver solid;
+  }
   &__header{
     display: flex;
 
