--- a/cms/fe-web/render/body/new-contents.hbs
+++ b/cms/fe-web/render/body/new-contents.hbs
@@ -9,6 +9,6 @@
         {{/fields}}
 
     </div>
-    <button type="submit">SAVE</button>
-    <a href="">BACK</a>
+    <button type="submit" title="Salva le modifiche">SAVE</button>
+    <a href="/contents" title="torna ai contenuti">BACK</a>
 </form>
