--- a/cms/fe-web/render/include/fields/repeatable-field.hbs
+++ b/cms/fe-web/render/include/fields/repeatable-field.hbs
@@ -4,7 +4,7 @@
     </span>
     <fieldset>
         <legend>
-            <a href="javascript:void(0);" class="js-add">
+            <a href="javascript:void(0);" class="js-add" title="Aggiungi un {{label}}">
                 <span class="typcn typcn-plus"></span>
             </a>
             <span>{{label}}</span>
@@ -14,7 +14,7 @@
                 {{#value}}
                     <div>
                     {{> field-builder this}}
-                    <a href="javascript:void(0);" class='js-delete'>
+                    <a href="javascript:void(0);" class='js-delete' title="Elimina il record">
                         <span class="typcn typcn-minus"></span>
                     </a>
                     </div>
