--- a/cms/static/less/_common.less
+++ b/cms/static/less/_common.less
@@ -42,7 +42,7 @@ legend {
     align-items: center;
     justify-content: center;
     padding: 5px;
-    background: silver;
+    background: mediumseagreen;
     color: white;
     border-radius: 50%;
     font-size: 12px;
@@ -59,7 +59,7 @@ legend {
     align-items: center;
     justify-content: center;
     padding: 5px;
-    background: silver;
+    background: indianred;
     color: white;
     border-radius: 50%;
     font-size: 12px;
@@ -99,7 +99,7 @@ textarea {
     align-items: center;
     justify-content: center;
     padding: 5px;
-    background: silver;
+    background: cornflowerblue;
     color: white;
     border-radius: 50%;
     font-size: 12px;
