--- a/cms/static/css/index.css
+++ b/cms/static/css/index.css
@@ -1675,3 +1675,17 @@ textarea {
   height: 22px;
   border: none;
 }
+.record {
+  display: flex;
+  padding: 10px 20px 10px 55px;
+}
+.record:first-child {
+  padding-top: 20px;
+}
+.record:last-child {
+  padding-bottom: 0;
+}
+.record a {
+  text-decoration: none;
+  color: black;
+}
