--- a/cms/fe-web/render/body/contents.hbs
+++ b/cms/fe-web/render/body/contents.hbs
@@ -1,4 +1,7 @@
-<h2 class="contents-title">Contenuti</h2>
+<header class="contents__header">
+    <h2 class="contents-title">Contenuti</h2>
+
+</header>
 <ul class="contents">
     {{#entities}}
         {{>content}}
