--- a/cms/fe-web/render/include/fields/boolean-field.hbs
+++ b/cms/fe-web/render/include/fields/boolean-field.hbs
@@ -2,8 +2,8 @@
     <fieldset>
         {{#if label}}<legend>{{label}}</legend>{{/if}}
         <label>true</label>
-        <input type="radio" name="{{name}}" value="true">
+        <input type="radio" name="{{name}}" value="true" autocomplete="off">
         <label>false</label>
-        <input type="radio" name="{{name}}" value="true">
+        <input type="radio" name="{{name}}" value="false" autocomplete="off">
     </fieldset>
 </div>
