--- a/cms/fe-web/render/include/fields/date-field.hbs
+++ b/cms/fe-web/render/include/fields/date-field.hbs
@@ -1,6 +1,6 @@
 <div class="field">
     <fieldset>
         {{#if label}}<legend>{{label}}</legend>{{/if}}
-        <input type="{{date_type}}" name="{{name}}" value="{{value}}">
+        <input type="{{date_type}}" name="{{name}}" value="{{value}}" autocomplete="off">
     </fieldset>
 </div>
