--- a/cms/static/less/_common.less
+++ b/cms/static/less/_common.less
@@ -1,14 +1,19 @@
 @import (less) "typicons.css";
-
+body{
+  overflow-y: scroll;
+}
 body, html {
   font-family: 'Roboto', sans-serif;
+
 }
 
 .content-wrapper {
   max-width: 1280px;
   margin: 0 auto;
 }
-
+.body-ctr {
+  padding: 0 16px;
+}
 fieldset {
   background: lightcyan;
   padding: 10px;
@@ -53,7 +58,7 @@ legend {
   display: none !important;
 }
 
-.fields > div {
+.fields--repeatable > div {
   .js-delete {
     display: inline-flex;
     align-items: center;
@@ -113,18 +118,18 @@ textarea {
 .hidden {
   display: none !important;
 }
-.disabled{
+
+.disabled {
   opacity: 0.5;
   pointer-events: none;
 }
+
 .invisible {
   visibility: hidden !important;
 }
-[data-accordion-button]{
+
+[data-accordion-button] {
   cursor: pointer;
   user-select: none;
 }
-.contents-title{
-  padding: 20px 48px;
-  font-size: 40px;
-}
+
