--- a/cms/fe-web/render/include/fields/document-field.hbs
+++ b/cms/fe-web/render/include/fields/document-field.hbs
@@ -2,9 +2,9 @@
     <fieldset>
         {{#if label}}
             <legend>{{label}}</legend>{{/if}}
-        <div class="document-ctr">
-            <img src="/{{value}}">
-            <input type="file" name="{{name}}" accept="{{mimetype}}">
+        <div class="document-ctr" data-mediator="document-field">
+            <img class="js-img" src="/{{value}}" alt="Image preview...">
+            <input class="js-input" autocomplete="off" type="file" name="{{name}}" accept="{{mimetype}}">
         </div>
     </fieldset>
 </div>
