--- a/cms/fe-web/render/include/fields/number-field.hbs
+++ b/cms/fe-web/render/include/fields/number-field.hbs
@@ -1,6 +1,6 @@
 <div class="field">
     <fieldset>
         {{#if label}}<legend>{{label}}</legend>{{/if}}
-        <input name="{{name}}" type="number">
+        <input name="{{name}}" type="number" autocomplete="off">
     </fieldset>
 </div>
