--- a/cms/static/less/_menu.less
+++ b/cms/static/less/_menu.less
@@ -8,22 +8,25 @@
   background: silver;
 
   transform: translateX(-150px);
-  top: 0;
+  top: 68px;
   left: 0;
-
+  transition: transform 0.5s ease-out;
   z-index: 1;
   padding: 60px 20px 0;
   &.opened {
     transform: translateX(0);
-    transition: all 0.5s ease-out;
+
   }
   &-trigger-btn {
-    position: relative;
+    position: fixed;
     z-index: 2;
     border: none;
     padding: 10px;
     border-radius: 50%;
     color: white;
     font-size: 14px;
+    margin: 16px;
+    top: 0;
+    left: 0;
   }
 }
