--- a/cms/fe-web/render/body/new-contents.hbs
+++ b/cms/fe-web/render/body/new-contents.hbs
@@ -1,4 +1,4 @@
-<form name="newContent" method="post" action="/contents/save" enctype="multipart/form-data">
+<form name="{{recordId}}" method="post" action="/contents/save" enctype="multipart/form-data">
     <header class="contents__header">
         <h2 class="contents-title">{{name}}</h2>
         <div class="actions">
