--- a/cms/fe-web/render/include/fields/text-field.hbs
+++ b/cms/fe-web/render/include/fields/text-field.hbs
@@ -1,6 +1,6 @@
 <div class="field">
     <fieldset>
         {{#if label}}<legend>{{label}}</legend>{{/if}}
-        <input autocomplete="false" placeholder="{{label}}" name="{{name}}" type="text" value="{{value}}">
+        <input autocomplete="false" placeholder="scrivi qui..." name="{{name}}" type="text" value="{{value}}">
     </fieldset>
 </div>
