--- a/cms/static/less/_common.less
+++ b/cms/static/less/_common.less
@@ -51,6 +51,9 @@ legend {
     color: white;
     border-radius: 50%;
     font-size: 12px;
+    &:hover {
+      transform: scale(1.1);
+    }
   }
 }
 
@@ -72,6 +75,9 @@ legend {
     width: 22px;
     height: 22px;
     border: none;
+    &:hover {
+      transform: scale(1.1);
+    }
   }
   display: flex;
   align-items: center;
@@ -112,6 +118,9 @@ textarea {
     width: 22px;
     height: 22px;
     border: none;
+    &:hover {
+      transform: scale(1.1);
+    }
   }
 }
 
