--- a/cms/static/less/_entity.less
+++ b/cms/static/less/_entity.less
@@ -30,6 +30,9 @@
       flex-grow: 1;
 
       border: none;
+      &:hover {
+        transform: scale(1.1);
+      }
       &.delete {
         background: indianred;
       }
