--- a/cms/fe-web/render/include/menu.hbs
+++ b/cms/fe-web/render/include/menu.hbs
@@ -5,7 +5,10 @@
     <nav class="menu">
         <ul>
             <li>
-                <a href="/contents">contents</a>
+                <a href="/contents">
+                    <span>contents</span>
+                    <span class="typcn typcn-chevron-right"></span>
+                </a>
             </li>
         </ul>
     </nav>
