--- a/cms/static/less/_menu.less
+++ b/cms/static/less/_menu.less
@@ -2,6 +2,11 @@
   &-ctr {
     position: relative;
   }
+  a {
+    color: white;
+    text-transform: uppercase;
+    text-decoration: none;
+  }
   position: fixed;
   width: 150px;
   height: 100vh;
